feat: add base css styles

--- a/app/assets/scss/style.scss
+++ b/app/assets/scss/style.scss
@@ -1,2 +1,73 @@
 
 
+@import "fonts.scss";
+@import "../css/reset";
+
+
+.calculator {
+	width: 640px;
+	height: 676px;
+	border: 1px solid #000;
+	background: url("assets/img/calc.png");
+	padding-top: 105px;
+	border-radius: 30px;
+	&_screen {
+		margin: 0 0 38px 54px;
+		width: 534px;
+		height: 90px;
+		background-color: green;
+	}
+	&_buttons {
+		display: grid;
+		width: 586px;
+		height: 400px;
+		margin-left: 28px;
+		margin-top: 70px;
+		grid-template-columns: 66px 66px 66px 66px 70px 66px 66px;
+		grid-template-rows: 42px 62px 62px 62px 62px;
+		gap: 19px 20px;
+		grid-template-areas:
+			"logo logo logo logo . . ."
+			". . . . . . ."
+			". . . . . . ."
+			". . . . plus . ."
+			". . . . plus . .";
+	}
+		.logo { 
+			grid-area: logo;
+		 }
+		.plus { 
+			grid-area: plus;
+		 }
+
+		.logo {
+			color: #fff;
+			font-size: 30px;
+			font-style: italic;
+		}
+		.button {
+			color: transparent;
+			cursor: pointer;
+			border-radius: 5px;
+			transition: 0.1s;
+			&:active {
+				transform: scale(1.2);
+			// box-shadow: inset 0px 0px 5px 7px #cacaca;
+			transform: translate(2px, 2px);
+			}
+			&:nth-child(6), &:nth-child(7n+6)  {
+				margin-left: 5px;
+				margin-right: -5px;
+			}
+			&:nth-child(n+26) {
+				margin-top: -5px;
+				margin-bottom: 3px;
+			}
+			&:nth-child(7), &:nth-child(7n+7) {
+				margin-right: -5px;
+			}
+		}
+	.redo {
+		background: url("assets/img/redo.png") no-repeat 50%/cover;
+	}
+}
