--- a/app/style.css
+++ b/app/style.css
@@ -69,7 +69,19 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0 0 38px 54px;
     width: 534px;
     height: 90px;
-    background-color: green; }
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+    -webkit-justify-content: flex-end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    font-size: 64px; }
   .calculator_buttons {
     display: grid;
     width: 586px;
