--- a/app/assets/scss/style.scss
+++ b/app/assets/scss/style.scss
@@ -49,7 +49,7 @@
 			font-style: italic;
 		}
 		.button {
-			color: transparent;
+			font-size: 0;
 			cursor: pointer;
 			border-radius: 5px;
 			transition: 0.1s;
