--- a/app/assets/scss/style.scss
+++ b/app/assets/scss/style.scss
@@ -19,9 +19,9 @@
 		display: flex;
 		justify-content: flex-end;
 		align-items: center;
-		font-size: 62px;
+		font-size: 66px;
 		color: rgba(0,0,0,0.75);
-		font-family: 'DIGITALCOUNTER7';
+		font-family: 'electronicanormal';
 		position: relative;
 		&.memory {
 			&:before {
