--- a/app/style.css
+++ b/app/style.css
@@ -88,12 +88,41 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 400; }
 
 /*--------------------*/
+body {
+  background: url("assets/img/bg_main.jpg"); }
+
+.main-page {
+  position: relative;
+  padding-left: 200px;
+  padding-top: 100px; }
+  .main-page .faq {
+    position: absolute;
+    font-family: Arial;
+    font-size: 18px;
+    line-height: 1.3;
+    text-align: justify;
+    font-weight: 500;
+    width: 580px;
+    height: 600px;
+    right: 15%;
+    top: 30%;
+    padding: 20px 60px;
+    -webkit-transform: rotateX(90deg);
+            transform: rotateX(90deg);
+    -webkit-transition: 1s;
+    -o-transition: 1s;
+    transition: 1s;
+    background: url("assets/img/bg_faq_3.png") no-repeat 50%/contain; }
+  .main-page .faq.active {
+    -webkit-transform: rotateX(0);
+            transform: rotateX(0); }
+
 .calculator {
   position: relative;
   width: 640px;
   height: 676px;
   border: 1px solid #000;
-  background: url("assets/img/calc_brush22.png");
+  background: url("assets/img/calc_bg.jpg");
   padding-top: 105px;
   border-radius: 30px; }
   .calculator .boot_block {
@@ -105,7 +134,8 @@ h1, h2, h3, h4, h5, h6 {
     top: 124px;
     left: 58px;
     overflow: hidden;
-    width: 0;
+    width: 522px;
+    padding-left: 522px;
     white-space: nowrap;
     font-family: electronicanormal;
     font-size: 56px;
@@ -115,15 +145,15 @@ h1, h2, h3, h4, h5, h6 {
 
 @-webkit-keyframes typing {
   0% {
-    width: 0; }
+    padding-left: 522px; }
   100% {
-    width: 490px; } }
+    padding-left: 0px; } }
 
 @keyframes typing {
   0% {
-    width: 0; }
+    padding-left: 522px; }
   100% {
-    width: 490px; } }
+    padding-left: 0px; } }
 
 @-webkit-keyframes hiding {
   0% {
